--- a/src/app/building-editor/building-editor.component.html
+++ b/src/app/building-editor/building-editor.component.html
@@ -6,7 +6,7 @@
     <mat-card-subtitle>Headquarter</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    
+    <app-nickname-editor></app-nickname-editor>
   </mat-card-content>
   <mat-card-actions>
     <button mat-button>Cancel</button>
