--- a/src/app/building-editor/building-editor.component.html
+++ b/src/app/building-editor/building-editor.component.html
@@ -2,8 +2,8 @@
 
 <mat-card>
   <mat-card-header>
-    <mat-card-title>30 St Mary Axe, London</mat-card-title>
-    <mat-card-subtitle>Headquarter</mat-card-subtitle>
+    <mat-card-title>{{building.address}}</mat-card-title>
+    <mat-card-subtitle>{{building.description}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
     <app-nickname-editor></app-nickname-editor>
