--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-building-editor [building]="building"></app-building-editor>
+<div class="container">
+    <app-building-editor [building]="building"></app-building-editor>
+</div>
