--- a/src/app/building-editor/building-editor.component.html
+++ b/src/app/building-editor/building-editor.component.html
@@ -1,17 +1,22 @@
-<h1>Building Editor</h1>
+<div class="container">
+  <h1>Building Editor</h1>
 
-<mat-card>
-  <mat-card-header>
-    <mat-card-title>{{building.address}}</mat-card-title>
-    <mat-card-subtitle>{{building.description}}</mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content>
-    <app-nickname-editor [nicknames]="building.nicknames"
-                         [validator]="nicknameValidator"
-                         (nicknamesChanged)="onNicknamesChanged($event)">
-    </app-nickname-editor>
-  </mat-card-content>
-  <mat-card-actions>
-    <button mat-button [disabled]="saveButtonDisabled" (click)="onClickSave($event)">Save</button>
-  </mat-card-actions>
-</mat-card>
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>{{building.address}}</mat-card-title>
+      <mat-card-subtitle>{{building.description}}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content class="content">
+      <h3>Nicknames:</h3>
+
+      <app-nickname-editor [nicknames]="building.nicknames"
+                           [validator]="nicknameValidator"
+                           (nicknamesChanged)="onNicknamesChanged($event)">
+      </app-nickname-editor>
+    </mat-card-content>
+    
+    <mat-card-actions>
+      <button mat-stroked-button [disabled]="saveButtonDisabled" (click)="onClickSave()">Save</button>
+    </mat-card-actions>
+  </mat-card>
+</div>
