--- a/src/app/nickname-editor/nickname-editor.component.scss
+++ b/src/app/nickname-editor/nickname-editor.component.scss
@@ -2,4 +2,8 @@
     background: rgba(0,0,0,.01);
     border: .5px solid rgba(0,0,0,.2);
     padding: 10px;
+
+    .add {
+        margin-top: 15px;
+    }
 }
