--- a/src/app/nickname-editor/nickname-editor.component.html
+++ b/src/app/nickname-editor/nickname-editor.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div *ngFor="let control of nicknameFormArray.controls; index as i">
         <mat-form-field appearance="legacy">
-            <input matInput [formControl]="nicknameFormArray.controls[i]">
+            <input matInput [formControl]="nicknameFormArray.controls[i]" class="nickname">
             <mat-error *ngIf="nicknameFormArray.controls[i].invalid">
                 Nickname must start with 'a'
             </mat-error>
