add test / fix test

--- a/src/app/nickname-editor/nickname-editor.component.html
+++ b/src/app/nickname-editor/nickname-editor.component.html
@@ -7,8 +7,8 @@
             </mat-error>
         </mat-form-field>
 
-        <button mat-icon-button aria-label="delete">
-            <mat-icon (click)="onClickDelete(i)">delete</mat-icon>
+        <button mat-icon-button aria-label="delete" class="delete" (click)="onClickDelete(i)">
+            <mat-icon>delete</mat-icon>
         </button>
     </div>
 
